# modern_cpp_challenge

./: .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
chapter_01/problem_01/: CMakeLists.txt  main.cpp  sum_multiples.h  test_main.cpp
chapter_01/problem_02/: CMakeLists.txt  greatest_common_divisor.h  main.cpp  test_main.cpp
chapter_01/problem_03/: CMakeLists.txt  least_common_multiple.h  main.cpp  test_main.cpp
chapter_01/problem_04/: CMakeLists.txt  test_main.cpp
chapter_01/problem_05/: CMakeLists.txt  test_main.cpp
chapter_01/problem_06/: CMakeLists.txt  main.cpp  test_main.cpp
include/: my_math_lib.h
src/chapter_01/problem_01/: test.cpp
src/chapter_01/problem_02/: test.cpp
src/chapter_01/problem_03/: test.cpp
src/chapter_01/problem_04/: test.cpp
src/chapter_01/problem_05/: test.cpp
src/chapter_01/problem_06/: test.cpp
src/utils/: my_math_lib.cpp
